// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="dropdown-transparent c0"
>
  <div
    className="dropdown-focus-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      className="dropdown-toggle "
      tabIndex={0}
    >
      show more
    </button>
    <div
      className="dropdown-menu"
    >
      <menu
        className="dropdown-list "
      >
        <li>
          <button
            onClick={[Function]}
            onMouseEnter={[Function]}
            tabIndex={0}
            type="button"
          >
            Delete
          </button>
        </li>
        <li>
          <a
            href="/wooo"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="button"
            tabIndex={0}
          >
            Edit
          </a>
        </li>
      </menu>
    </div>
  </div>
  <button
    className="dropdown-toggle dropdown-toggle-second"
    tabIndex={0}
  >
    show more
  </button>
</div>
`;

exports[`Dropdown matches snapshot for tab hidden (closed) 1`] = `
.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="dropdown-toggle "
    isOpen={false}
    onClick={[Function]}
  >
    show more
  </button>
</div>
`;

exports[`Dropdown matches snapshot for tab hidden (open) 1`] = `
.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="dropdown-toggle "
    isOpen={true}
    onClick={[Function]}
  >
    show more
  </button>
  <div
    className="dropdown-menu"
  >
    <menu
      className="dropdown-list "
    >
      <li>
        <button
          onClick={[Function]}
          onMouseEnter={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete
        </button>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </menu>
  </div>
</div>
`;
